--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -13,7 +13,7 @@
 
     margin: 4rem 0 2rem;
 
-    .app__work-filer-item {
+    .app__work-filter-item {
         padding: 0.5rem 1rem;
         border-radius: 0.5rem;
         background-color: white;
@@ -71,7 +71,7 @@
             border-radius: 0.75rem;
         }
 
-        @media screen and (max-width: 300px) {
+        @media screen and (max-width: 400px) {
             width: 100%;
             margin: 1rem;
         }
@@ -128,6 +128,10 @@
             height: 50%;
             color: var(--white-color);
         }
+    }
+
+    @media screen and (max-width: 800px) {
+        opacity: 1;
     }
 }
 
