--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -28,6 +28,13 @@
             height: 40px;
         }
     }
+
+    h1 {
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: var(--secondary-color);
+        text-shadow: 1px 1px lightblue;
+
+    }
 }
 
 .app__navbar-links {
@@ -59,7 +66,7 @@
             flex-direction: column;
 
             text-transform: uppercase;
-            font-weight: 500;
+            font-weight: 600;
 
             transition: all 0.3s ease-in-out;
 
