--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -53,7 +53,7 @@
         }
 
         &:hover {
-            box-shadow: 0 0 25px #fee4e5
+            box-shadow: 0 0 25px #c6c5c9
         }
 
         @media screen and (min-width: 2000px) {
