--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -49,11 +49,12 @@
     align-items: center;
 
     .app__work-item {
-        width: 270px;
+        width: 220px;
+        height: 320px;
         flex-direction: column;
         
-        margin: 2rem;
-        padding: 1rem;
+        margin: 1.2rem;
+        padding: 0.7rem;
         border-radius: 0.5rem;
         background-color: white;
         color: black;
@@ -80,13 +81,13 @@
 
 .app__work-img {
     width: 100%;
-    height: 230px;
+    height: 200px;
 
     position: relative;
     
     img {
         width: 100%;
-        height: 100%;
+        height: 200px;
         border-radius: 0.5rem;
         object-fit: cover;
     }
@@ -136,7 +137,7 @@
 }
 
 .app__work-content {
-    padding: 0.5rem;
+    padding: 0.2rem;
     width: 100%;
     position: relative;
     flex-direction: column;
@@ -144,6 +145,7 @@
     h4 {
         margin-top: 1rem;
         line-height: 1.5;
+        font-size: 0.8rem;
     }
 
     .app__work-tag {
@@ -151,7 +153,12 @@
         
         padding: 0.5rem 1rem;
         border-radius: 10px;
-        background-color: white;
+        background-color: var(--secondary-color);
+        opacity: 0.8;
         top: -25px;
+
+        p {
+            color: white;
+        }
     }
 }
